package edu.fiuba.algo3.Modelo;

public class NadaOcupacion implements Ocupacion {

    @Override
    public Gladiador modificarEnergia(Gladiador unGladiador) {//estosMetodos está de mas =(
        return null;
    }

    @Override
    public int modificarEnergia(int energia) {//estosMetodos está de mas =(
        return 0;
    }

    @Override
    public Gladiador combatir(Gladiador ungladiador) {//estosMetodos está de mas =(
        return null;
    }

    @Override
    public Gladiador recibirPremio(Gladiador ungladiador) {//estosMetodos está de mas =(
        return null;
    }
}
