@startuml

interface Premio{
    +{abstract}modificarEnergia(unGladiador Gladiador):Gladiador
}


interface  Obstaculizador{
    +{abstract}combatir(unGladiador Gladiador)
    +{abstract}modificarEnergia(unaEnergia int):int
}


class FieraSalvaje{
    -energia:int
    +FieraSalvaje(energia int):void
    +combatir(unGladiador Gladiador):void
}

class Bacanal{
    +combatir(unGladiador Gladiador):void
    +modificarEnergia(unaEnergia int):int
}

class Lesion{
    +combatir(unGladiador Gladiador):void
    +modificarEnergia(unaEnergia int):int
    +interactuarConLaOcupacion(ungladiador Gladiador ):Gladiador
}


class PremioEquipamiento{
      +interactuarConLaOcupacion(ungladiador Gladiador ):Gladiador
 }


interface Equipado{
    +{abstract}modificarEnergia(unaEnergia int):int
}


class Casco{
    +modificarEnergia(unaEnergia int):int
}
class EscudoYEspada{
    +modificarEnergia(unaEnergia int):int
}
class Armadura{
    +modificarEnergia(unaEnergia int):int
}
class LLave{
    +modificarEnergia(unaEnergia int):int
}

class Comida{
    +modificarEnergia(unaEnergia int):int
}


interface Ocupable{
    interactuarConLaOcupacion(ungladiador Gladiador ):Gladiador
}


class NadaOcupacion{
    +interactuarConLaOcupacion(ungladiador Gladiador ):Gladiador
}



Premio <|.right. Comida
Ocupable <|... Comida

Equipado <|.up.Casco
Equipado <|.up. Armadura
Equipado <|.up. LLave
Equipado <|.up. EscudoYEspada


Obstaculizador <|.up. FieraSalvaje
Obstaculizador <|.right. Bacanal
Obstaculizador <|.left.Lesion


Ocupable <|.left.Bacanal
Ocupable <|.. FieraSalvaje
Ocupable<|.right. PremioEquipamiento
Ocupable<|.up. NadaOcupacion
Ocupable <|... Armadura
Ocupable <|... Casco
Ocupable <|... EscudoYEspada
Ocupable <|... LLave




@enduml